# frccontrol

./: .gitignore  .pylintrc  LICENSE  README.md  README.rst  azure-pipelines.yml  format.py  publish-frccontrol.sh  pyproject.toml  setup.py
examples/: differential_drive.py  double_jointed_arm.py  drivetrain.py  elevator.py  flywheel.py  single_jointed_arm.py
frccontrol/: __init__.py  ctrlutil.py  discretization.py  dlqr.py  extended_kalman_filter.py  geometry.py  kalman_filter.py  kalmd.py  linear_plant_inversion_feedforward.py  linear_quadratic_regulator.py  lqr.py  models.py  numerical_integration.py  numerical_jacobian.py  plotutil.py  profiles.py  runge_kutta.py  steady_state_kalman_filter.py  system.py  system_writer.py  trajectory.py  version.py
frccontrol/test/: test_numerical_jacobian.py  test_pose2d.py  test_rotation2d.py  test_transform2d.py  test_translation2d.py  test_twist2d.py
test/: __init__.py
